fix:Visibilidad de la comunidad

--- a/Govench/src/app/shared/components/comunity-manage/comunity-manage.component.scss
+++ b/Govench/src/app/shared/components/comunity-manage/comunity-manage.component.scss
@@ -1,3 +1,11 @@
 .btnd{
     width: 150px;
 }
+.ins {
+    background-color: #03129B;
+    color: #fff;
+    &:hover {
+      background-color: darken(#03129B, 10%);
+      border-color: darken(#03129B, 10%);
+    }
+  }
